# PCLDA-pipeline

./: .gitignore  .pylintrc  LDA_plans.txt  README.md  pyproject.toml
pclda-pipeline/: test.ipynb
pclda-pipeline/.ipynb_checkpoints/: test-checkpoint.ipynb
pclda_pipeline/: combine_states.py  convert.py  convert_extended.py
tests/: load_test.py
