[tool.poetry]
name = "pclda-pipeline"
version = "0.1.0"
description = "Pipeline for Westac"
authors = ["liamtabib <liam.tab7@gmail.com>"]
readme = "README.md"
packages = [{include = "pclda_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
jupyterlab = "^4.0.2"
progressbar = "^2.5"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
pytest = "^7.3.2"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true
skip_magic_trailing_comma = false
skip-magic-trailing-comma = false
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = ["penelope", "tests"]
extra_standard_library = ["__paths__"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
